# claude-workbench

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  LICENSE  README.md  RELEASE.md  TESTING_GUIDE.md  UI_FIXES_SUMMARY.md  index.html  package.json  test-nodejs-detection.md  vite.config.ts  愿景
.github/workflows/: build.yml
scripts/: fetch-and-build.js
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: claude_binary.rs  main.rs
src-tauri/src/checkpoint/: manager.rs
src-tauri/src/commands/: agents.rs  claude.rs  clipboard.rs  mcp.rs  mod.rs  provider.rs  slash_commands.rs  usage.rs
src-tauri/src/process/: registry.rs
src/components/: AgentExecution.tsx  AgentRunOutputViewer.tsx  AgentRunView.tsx  CCAgents.tsx  CheckpointSettings.tsx  ClaudeBinaryDialog.tsx  ClaudeCodeSession.tsx  ClaudeStatusIndicator.tsx  ClaudeVersionSelector.tsx  CreateAgent.tsx  ErrorDisplay.tsx  FilePicker.tsx  FloatingPromptInput.tsx  GitHubAgentBrowser.tsx  HooksEditor.tsx  IconPicker.tsx  ImagePreview.tsx  LanguageSelector.tsx  MCPAddServer.tsx  MCPManager.tsx  ProjectList.tsx  ProjectSettings.tsx  ProviderForm.tsx  ProviderManager.tsx  SessionList.tsx  Settings.tsx  SlashCommandPicker.tsx  SlashCommandsManager.tsx  StorageTab.tsx  StreamMessage.tsx  TimelineNavigator.tsx  ToolWidgets.tsx  Topbar.tsx  UsageDashboard.tsx  WebviewPreview.tsx  index.ts
src/components/ui/: dialog.tsx  toast.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useTranslation.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/lib/: api.ts  claudeSyntaxTheme.ts  errorHandler.ts
